# ADMIN-PANEL

./: Dockerfile  README.md  bookings.db  cancellations.db  chat.db  dashboard.db  main.py  pyproject.toml  render.yaml  requirements.txt
admin_controls/: admin_controls.py  requirements.txt  test_admin_controls.py
ai_settings/: ai_settings.py  test_ai_settings.py
ai_settings/monitoring/: __init__.py  monitoring_models.py
booking_manager/: README.md  bookings.db  main.py  test_booking_manager.py
cancellations_panel/: README.md  cancellations.db  main.py  requirements.txt  test_cancellations.py
chat/: README.md  api.py  app.py  database.py  main.py  models.py  test_chat.py  test_data.py
dashboard/: README.md  database.py  main.py  requirements.txt  test_dashboard.py
instance/: admin_controls.db  ai_settings.db  monitoring.db  reports.db  standby.db  test_ai_settings.db  user_management.db  users.db
monitoring/: monitoring.py  test_endpoints.py  test_monitoring.py
monitoring/instance/: monitoring.db
reports/: reports.py  requirements.txt  test_reports.py
standby/: README.md  app.py  models.py  requirements.txt  tempCodeRunnerFile.py
standby/instance/: standby.db
user_management/: __init__.py  app.py  requirements.txt
